CustomObjects/objects/invoiceit_s__Payment_Plan_Installment__c.object
<CustomObject>
    <fields>
        <fullName>QTC__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Payment Plan Installments</relationshipLabel>
        <relationshipName>Payment_Plan_Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Plan Installments</relationshipLabel>
        <relationshipName>Payment_Plan_Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Description__c</fullName>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>invoiceit_s__Invoice__c</referenceTo>
        <relationshipLabel>Payment Plan Installments</relationshipLabel>
        <relationshipName>Payment_Plan_Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Last_Processing_Date__c</fullName>
        <label>Last Processing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Mid_Term_Adjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mid-Term Adjustment</label>
        <referenceTo>invoiceit_s__Mid_Term_Adjustment__c</referenceTo>
        <relationshipLabel>Payment Plan Installments</relationshipLabel>
        <relationshipName>Payment_Plan_Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__No_of_tries__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No of tries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>invoiceit_s__Job__c</referenceTo>
        <relationshipLabel>Payment Plan Installments</relationshipLabel>
        <relationshipName>Payment_Plan_Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Method</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>invoiceit_s__Payment_Method__c.invoiceit_s__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.invoiceit_s__Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>invoiceit_s__Payment_Method__c.invoiceit_s__Payment_Method__c</field>
                <operation>equals</operation>
                <valueField>$Source.invoiceit_s__Payment_Type__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>invoiceit_s__Payment_Method__c</referenceTo>
        <relationshipLabel>Payment Plan Installments</relationshipLabel>
        <relationshipName>Payment_Plan_Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Payment_Status__c</fullName>
        <formula>IF(
AND(invoiceit_s__Unpaid_Amount__c &gt; 0, invoiceit_s__Paid_Amount__c &gt; 0),
&apos;Partially Paid&apos;, IF(invoiceit_s__Unpaid_Amount__c &gt; 0, &apos;Unpaid&apos;, &apos;Paid&apos;)
)</formula>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Others (Cash, Check etc)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>invoiceit_s__Payment__c</referenceTo>
        <relationshipLabel>Payment Plan Installments</relationshipLabel>
        <relationshipName>Payment_Plan_Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>invoiceit_s__Transaction__c</referenceTo>
        <relationshipLabel>Payment Plan Installments</relationshipLabel>
        <relationshipName>Payment_Plan_Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Unpaid_Amount__c</fullName>
        <formula>invoiceit_s__Payment_Amount__c -  invoiceit_s__Paid_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Payment Plan Installment</label>
    <nameField>
        <displayFormat>PPI-{0000}</displayFormat>
        <label>Payment Plan Installment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Plan Installments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>invoiceit_s__Please_select_payment_method_for_type</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISPICKVAL( invoiceit_s__Payment_Type__c ,&quot;ACH&quot;),ISPICKVAL( invoiceit_s__Payment_Type__c ,&quot;Credit Card&quot;)) &amp;&amp;  invoiceit_s__Payment_Method__c  = null</errorConditionFormula>
        <errorMessage>Please select &quot;Payment Method&quot; if you have selected &quot;Payment Type&quot; as &quot;Credit Card&quot; or &quot;ACH&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__Restrict_Changing_AccountDiffFromOrdAcc</fullName>
        <active>true</active>
        <errorConditionFormula>IF(invoiceit_s__Order__c != null &amp;&amp; invoiceit_s__Account__c != null &amp;&amp;  invoiceit_s__Order__r.invoiceit_s__Account__c !=  invoiceit_s__Account__c , true, false)</errorConditionFormula>
        <errorMessage>Account should be order &apos;s Account</errorMessage>
    </validationRules>
</CustomObject>